login page complete.

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+*{
+  color: #fff;
+}
 body{
-  background-color: bisque;
+  background-color: #111;
 }
